# snf-image

./: .gitignore  ChangeLog  LICENSE  Makefile.am  README  README.md  configure.ac  devflow.conf  version  version.m4  version_template
debian/: changelog  control  copyright  maintscript  rules  snf-image-helper.control  snf-image-tools.dirs  snf-image-tools.install  snf-image-tools.manpages  snf-image.config  snf-image.dirs  snf-image.install  snf-image.links  snf-image.manpages  snf-image.postinst  snf-image.postinst.in  snf-image.postrm  snf-image.templates  snf-image.templates.in  version_pinning.pref  version_pinning.pref.in
docs/: Makefile  advanced.rst  architecture.rst  conf.py  configuration.rst  design.rst  development.rst  index.rst  installation.rst  interface.rst  usage.rst  version.py  version_template
docs/design/: cloud-init.rst
docs/man/: snf-image-create-helper.rst  snf-image-update-helper.rst
helper/: Makefile.am  common.sh  configure.ac  rc.local  rc.local.in  snf-image-helper.in  snf-passtohash.py
helper/tasks/: 00InstallUnattend.sh  10ResizeUnmounted  10ResizeUnmounted.in  10ResizeUnmounted.sh  30MountImage  30MountImage.in  30MountImage.sh  40AddDeleteUnattendScript  40AddDeleteUnattendScript.in  40AddDeleteUnattendScript.sh  40AssignHostname.sh  40ChangePassword.sh  40DeleteSSHKeys  40DeleteSSHKeys.in  40DeleteSSHKeys.sh  40InstallUnattend  40InstallUnattend.in  40InstallUnattend.sh  40ResizeMounted  40ResizeMounted.in  40ResizeMounted.sh  40SELinuxAutorelabel  40SELinuxAutorelabel.in  40SELinuxAutorelabel.sh  50AssignHostname  50AssignHostname.in  50AssignHostname.sh  50ChangePassword  50ChangePassword.in  50ChangePassword.sh  50EnforcePersonality.py  80UmountImage  80UmountImage.in  80UmountImage.sh  90SELinuxAutorelabel.sh  Makefile.am
host/: Makefile.am  common.sh.in  configure.ac  create  defaults  ganeti_api_version  parameters.list  rules.template  snf-image-update-helper.in
snf-image-helper/: AUTHORS  CONTRIBUTORS  COPYING  ChangeLog  Makefile.am  common.sh  common.sh.in  configure.ac  decode-properties.py  disklabel.py  fix_gpt.py  handle-ini-file.py  hashpwd.py  inject-files.py  snf-image-helper.in  snf-passtohash.py  unattend.xml
snf-image-helper/debian/: changelog  control  copyright  rules
snf-image-helper/networking/: Makefile.am  cloud-init.sh.in  debian.sh.in  freebsd.sh.in  ifupdown.sh.in  netbsd.sh.in  nm.sh.in  openbsd.sh.in  redhat.sh.in
snf-image-helper/tasks/: 10FixPartitionTable.in  10ResizeUnmounted.in  20FilesystemResizeUnmounted.in  30MountImage.in  35InitializeDatasource.in  35InstallUnattend.in  40AddDeleteUnattendScript.in  40AddSwap.in  40DeleteSSHKeys.in  40DisableRemoteDesktopConnections.in  40EnforcePersonality  40EnforcePersonality.py  40FilesystemResizeMounted.in  40InstallUnattend.in  40ResizeMounted.in  40SELinuxAutorelabel.in  41DisableRemoteDesktopConnections.in  50AddSwap.in  50AssignHostname.in  50ChangeMachineId.in  50ChangePassword.in  50ConfigureNetwork.in  50DeleteSSHKeys.in  50DisableRemoteDesktopConnections.in  50EnforcePersonality.in  50FilesystemResizeMounted.in  50SELinuxAutorelabel.in  60EnforcePersonality.in  70RunCustomTask.in  80UmountImage.in  81FilesystemResizeAfterUmount.in  Makefile.am
snf-image-host/: AUTHORS  CONTRIBUTORS  ChangeLog  Makefile.am  common.sh.in  configure.ac  copy-monitor.py  create  decode-config.py  defaults  defaults.in  export  helper-monitor.py  host-monitor.py  import  kconfig-4.2.5-1~bpo8+1  kconfig-4.9.30-2+deb9u2.1.snf.image.helper.1  kvm-common.sh  ms-timezone-indexes.txt  multistrap.conf  parameters.list  pithcat  repo_pinning.pref  snf-image-create-fixed-helper.in  snf-image-create-helper.in  snf-image-dump-helper.in  snf-image-update-helper.in  snf-image.conf.in  stderr-monitor.py  sysprep.inf  sysprep.inf.in  unattend.xml.in  verify  version_pinning.pref  version_pinning.pref.in  vif-snf-image  xen-common.sh
snf-image-host/backends/: Makefile.am
snf-image-host/backends/dst/: Makefile.am  file.in  local.conf  local.in  uri.conf  uri.in
snf-image-host/backends/dst/rbd/: Makefile.am  rbd.conf.in  rbd.in  rbd_import
snf-image-host/backends/src/: Makefile.am  file.in  local.conf.in  local.in  network.in  null.in  pithos.in
snf-image-host/backends/src/pithos/: Makefile.am  pithos.conf.in  pithos.in
snf-image-host/debian/: README  changelog  control  copyright  dirs  install  postinst  rules  snf-image-host.install  version_pinning.pref
snf-image-host/mbr/: Makefile.am  pad.py
